--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 	<body>
 		<div class="main"><h1>Jean-Louis' projects</h1></div>
 		<p><img src="line.PNG" class="underline"/></p>
-		<p><span><img src="check.png" class="one hoverenabled"/></span><a href = "converterPage/converterHomePage.html" id="one" target="_blank">Conversion tutorials + online converter</a></p>
+		<p><span><img src="check.png" class="one"/></span><a href = "converterPage/converterHomePage.html" id="one" target="_blank">Conversion tutorials + online converter</a></p>
 		<br />
-		<p><img src="check.png" class="two hoverenabled"/><a href = "palindromePage/palindromeHomePage.html" id="two" target="_blank">Palindrome checker</a></p>
+		<p><img src="check.png" class="two"/><a href = "palindromePage/palindromeHomePage.html" id="two" target="_blank">Palindrome checker</a></p>
 		<br />
 		<p><span><img src="txtbubble.png" id="bubble"><a href = "bio/bioHomePage.html" id="special" target="_blank">jl's bio.</a></p>
-		<p><img src="check.png" class="three hoverenabled"/><a href = "casinoGames/casinoHomePage.html" id="three" target="_blank" target="_blank">Popular casino games : play & bet tips</a></p>
+		<p><img src="check.png" class="three"/><a href = "casinoGames/casinoHomePage.html" id="three" target="_blank" target="_blank">Popular casino games : play & bet tips</a></p>
 		<br />
 			
 	</body>
