--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<br />
 		<p><img src="check.png" class="two"/><a href = "palindromePage/palindromeHomePage.html" id="two" target="_blank">Palindrome checker</a></p>
 		<br />
-		<p><span><img src="txtbubble.png" id="bubble"><a href = "bio/bioHomePage.html" id="special" target="_blank">jl's bio.</a></p>
+		<p><span><img src="txtbubble.png" id="bubble"><a href = "bio/bioHomePage.html" id="special" target="_blank">JL's bio.</a></p>
 		<p><img src="check.png" class="three"/><a href = "casinoGames/casinoHomePage.html" id="three" target="_blank" target="_blank">Popular casino games : play & bet tips</a></p>
 		<br />
 			
