--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<title>Jean-Louis' projects</title>
-		<link href="MainCSSfile.css" rel="stylesheet"/>
+		<link href="indexCSS/index_css.css" rel="stylesheet"/>
 		<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
@@ -16,13 +16,13 @@
 
 	<body>
 		<div class="main"><h1>Jean-Louis' projects</h1></div>
-		<p><img src="line.PNG" class="underline"/></p>
-		<p><span><img src="check.png" class="one"/></span><a href = "converterPage/converterHomePage.html" id="one" target="_blank">Conversion tutorials + online converter</a></p>
+		<p><img src="indexImages/line.PNG" class="underline"/></p>
+		<p><span><img src="indexImages/check.png" class="one"/></span><a href = "converterPage/converterHomePage.html" id="one" target="_blank">Conversion tutorials + online converter</a></p>
 		<br />
-		<p><img src="check.png" class="two"/><a href = "palindromePage/palindromeHomePage.html" id="two" target="_blank">Palindrome checker</a></p>
+		<p><img src="indexImages/check.png" class="two"/><a href = "palindromePage/palindromeHomePage.html" id="two" target="_blank">Palindrome checker</a></p>
 		<br />
-		<p><span><img src="txtbubble.png" id="bubble"><a href = "bio/bioHomePage.html" id="special" target="_blank">JL's bio.</a></p>
-		<p><img src="check.png" class="three"/><a href = "casinoGames/casinoHomePage.html" id="three" target="_blank" target="_blank">Popular casino games : play & bet tips</a></p>
+		<p><span><img src="indexImages/txtbubble.png" id="bubble"><a href = "bio/bioHomePage.html" id="special" target="_blank">JL's bio.</a></p>
+		<p><img src="indexImages/check.png" class="three"/><a href = "casinoGames/casinoHomePage.html" id="three" target="_blank" target="_blank">Popular casino games : play & bet tips</a></p>
 		<br />
 			
 	</body>
