--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<p><img src="indexImages/check.png" class="two"/><a href = "palindromePage/palindromeHomePage.html" id="two" target="_blank">Palindrome checker</a></p>
 		<br />
 		<p><span><img src="indexImages/txtbubble.png" id="bubble"><a href = "bio/bioHomePage.html" id="special" target="_blank">JL's bio.</a></p>
-		<p><img src="indexImages/check.png" class="three"/><a href = "casinoGames/casinoHomePage.html" id="three" target="_blank" target="_blank">Popular casino games : play & bet tips</a></p>
+		<p><img src="indexImages/redcross.png" class="three"/><a href = "casinoGames/casinoHomePage.html" id="three" target="_blank" target="_blank">Popular casino games : play & bet tips</a></p>
 		<br />
 			
 	</body>
